---
source: starstream-compiler/src/typecheck/tests.rs
description: "Source:\n\nstruct Point {\n    x: i64,\n    y: i64,\n}\n\nfn total(point: Point) -> i64 {\n    let translated = Point {\n        x: point.x + 1,\n        y: point.y + 1,\n    };\n\n    translated.x + translated.y\n}\n"
---
T-Fn: total => i64
  T-Let: {point: Point, total: fn(point: Point) -> i64} ⊢ let translated = Point {
    x: point.x + 1,
    y: point.y + 1,
}; ⇒ Point
    T-StructLit: {point: Point, total: fn(point: Point) -> i64} ⊢ Point {
    x: point.x + 1,
    y: point.y + 1,
} ⇒ Point
      T-Bin-Add: {point: Point, total: fn(point: Point) -> i64} ⊢ point.x + 1 ⇒ i64
        T-FieldAccess: {point: Point, total: fn(point: Point) -> i64} ⊢ point.x ⇒ i64
          T-Var: {point: Point, total: fn(point: Point) -> i64} ⊢ point ⇒ Point
        T-Int: {point: Point, total: fn(point: Point) -> i64} ⊢ 1 ⇒ i64
        Unify-Var: i64 ~ i64 => {i64/t3}
      Unify-Const: i64 ~ i64 => {}
      T-Bin-Add: {point: Point, total: fn(point: Point) -> i64} ⊢ point.y + 1 ⇒ i64
        T-FieldAccess: {point: Point, total: fn(point: Point) -> i64} ⊢ point.y ⇒ i64
          T-Var: {point: Point, total: fn(point: Point) -> i64} ⊢ point ⇒ Point
        T-Int: {point: Point, total: fn(point: Point) -> i64} ⊢ 1 ⇒ i64
        Unify-Var: i64 ~ i64 => {i64/t4}
      Unify-Const: i64 ~ i64 => {}
  T-ReturnTail: translated.x + translated.y => i64
    T-Bin-Add: {point: Point, total: fn(point: Point) -> i64, translated: Point} ⊢ translated.x + translated.y ⇒ i64
      T-FieldAccess: {point: Point, total: fn(point: Point) -> i64, translated: Point} ⊢ translated.x ⇒ i64
        T-Var: {point: Point, total: fn(point: Point) -> i64, translated: Point} ⊢ translated ⇒ Point
      T-FieldAccess: {point: Point, total: fn(point: Point) -> i64, translated: Point} ⊢ translated.y ⇒ i64
        T-Var: {point: Point, total: fn(point: Point) -> i64, translated: Point} ⊢ translated ⇒ Point
      Unify-Const: i64 ~ i64 => {}
    Unify-Const: i64 ~ i64 => {}
